// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserAvatarConnected component renders UserAvatarConnected 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
  themeSize={40}
>
  <Image
    fadeDuration={250}
    onLoad={[Function]}
    source={
      Array [
        Object {
          "__typename": "ImageMedia",
          "cache": "force-cache",
          "uri": "https://res.cloudinary.com/apollos/image/fetch/c_limit,f_auto,w_1600/https://apollosrock.newspring.cc/GetImage.ashx%3Fguid%3D31af1a61-360c-4b1e-8e62-45517c06a9a2",
        },
      ]
    }
    style={
      Object {
        "backgroundColor": "#A5A5A5",
        "borderRadius": 20,
        "bottom": 0,
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": "100%",
      }
    }
    themeSize={40}
  />
</View>
`;

exports[`UserAvatarConnected component renders UserAvatarConnected without a photo 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "height": 40,
      "justifyContent": "center",
      "width": 40,
    }
  }
  themeSize={40}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#A5A5A5",
        "borderRadius": 40,
        "height": 40,
        "justifyContent": "center",
        "width": 40,
      }
    }
    themeSize={40}
  >
    <Text
      style={
        Object {
          "color": "#F8F7F4",
          "fontFamily": "InterUI-Bold",
          "fontSize": 20,
        }
      }
      themeSize={40}
    >
      GC
    </Text>
  </View>
</View>
`;
